--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,11 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    cellarr-array>=0.3.0
+    pandas
+    numpy
+    pyarrow
+    tiledb
 
 
 [options.packages.find]
