--- a/setup.cfg
+++ b/setup.cfg
@@ -5,18 +5,18 @@
 
 [metadata]
 name = cellarr-frame
-description = Add a short description here!
+description = A high-level Python package for managing DataFrames using TileDB as a backing store
 author = Jayaram Kancherla
 author_email = jayaram.kancherla@gmail.com
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/CellArr/cellarr-frame
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
+    Documentation = https://github.com/CellArr/cellarr-frame
+   Source = https://github.com/CellArr/cellarr-frame
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
@@ -41,7 +41,7 @@ package_dir =
     =src
 
 # Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
+python_requires = >=3.9
 
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
@@ -49,6 +49,11 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    cellarr-array>=0.3.2
+    pandas
+    numpy
+    pyarrow
+    tiledb
 
 
 [options.packages.find]
