--- a/setup.cfg
+++ b/setup.cfg
@@ -50,10 +50,10 @@ python_requires = >=3.9
 install_requires =
     importlib-metadata; python_version<"3.8"
     cellarr-array>=0.3.2
-    pandas
+    tiledb
     numpy
     pyarrow
-    tiledb
+    pandas<3.0
 
 
 [options.packages.find]
