more changes for shape and other fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = cellarr-frame
-description = A high-level Python package for managing DataFrames using TileDB as a backing store
+description = A wrapper for managing DataFrames backed by TileDB
 author = Jayaram Kancherla
 author_email = jayaram.kancherla@gmail.com
 license = MIT
